Fix notes bubbles overflowing off the page

--- a/src/styles/notes.module.css
+++ b/src/styles/notes.module.css
@@ -39,8 +39,8 @@
 
 @media (max-width: 28em) {
     .notesItem {
-        width: 2rem !important;
-        height: 2rem !important;
+        width: 2.5rem !important;
+        height: 2.5rem !important;
         font-size: 0.8rem !important;
         font-weight: 300 !important;
     }
